test/classes/initializers/postInit/override.good
override.chpl:8: error: the 'override' keyword cannot be applied to 'postinit()' routines
